# AIWeatherpredictor

./: .gitignore  .replit  FARMPAL_DOCUMENTATION.md  FARMPAL_GOVERNMENT_BRIEF.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
artifacts/: ml_model.json  ml_model_meta.json
artifacts/api-server/: ml_model_meta.json  ml_model_sklearn.pkl  ml_seed_training_summary.json  package-lock.json  package.json  start.sh  tsconfig.json
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/ml/: app.py  requirements.txt  seed_historical.py  seed_startup_model.py
artifacts/api-server/src/: app.ts  index.ts
artifacts/weather-app/: index.html  package.json  vite.config.ts
artifacts/weather-app/.replit-artifact/: artifact.toml
artifacts/weather-app/src/: App.tsx  index.css
artifacts/weather-mobile/: app.json  eas.json  package.json
artifacts/weather-mobile/.replit-artifact/: artifact.toml
artifacts/weather-mobile/app/: _layout.tsx
artifacts/weather-mobile/components/: AlertsBanner.tsx  AlertsBannerClean.tsx  (+25 more)
attached_assets/: Pasted--50-Kenyan-farming-locations-across-all-major-agricultu_1775208904397.txt  Pasted-Build-a-full-stack-AI-powered-weather-prediction-system_1775064305383.txt  Pasted-Upgrade-my-existing-weather-app-into-an-intelligent-mic_1775067145731.txt  Pasted-warning-in-the-working-copy-of-lib-api-zod-src-generate_1775125053192.txt
lib/api-spec/: openapi.yaml
python/: data_fetch.py  features.py  predict.py  predict_regressor.py  requirements.txt  train.py  train_model.py
(+66 files in other folders)
